# LazyChess

./: CHANGELOG.md  Cargo.toml  LICENSE  readme.md  rustfmt.toml
.github/ISSUE_TEMPLATE/: blank.yml  bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml
examples/: analysis.rs  analysis_run_partial.rs  basic.rs  board_inspection.rs  fen_pgn.rs  game_status.rs  move_validation.rs  perft.rs  suggested_move.rs  uci_engine.rs  uci_ponder.rs
src/: analyzer.rs  board.rs  fen.rs  game.rs  lib.rs  movegen.rs  opening.rs  pgn.rs  types.rs  uci.rs
src/classifications/: accuracy.rs  attackers.rs  brilliant.rs  danger_levels.rs  defenders.rs  expected_points.rs  great.rs  mod.rs  piece_safety.rs  piece_trapped.rs  point_loss.rs  types.rs
tests/: chess_tests.rs  perft.yml
