[package]
name = "lazychess"
version = "0.1.1"
edition = "2024"
description = "A fast, memory-efficient chess engine library for Rust"
authors = ["Ditzzy"]
license = "MIT"
readme = "readme.md"
repository = "https://github.com/OhMyDitzzy/LazyChess"
homepage = "https://github.com/OhMyDitzzy/LazyChess"
documentation = "https://docs.rs/lazychess"
keywords = ["chess", "engine", "fide", "uci", "game"]
categories = ["game-engines", "algorithms"]
exclude = ["assets/", "tests/", ".github/"]

[dependencies]
cli-table = "0.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
